marcom/css/main.css
@font-face {
  font-family: 'HelveticaNeueLT-Thin';
  src: url('../fonts/HelveticaNeueLT-Thin_gdi.eot');
  src: url('../fonts/HelveticaNeueLT-Thin_gdi.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaNeueLT-Thin_gdi.woff') format('woff'), url('../fonts/HelveticaNeueLT-Thin_gdi.ttf') format('truetype'), url('../fonts/HelveticaNeueLT-Thin_gdi.otf') format('opentype'), url('../fonts/HelveticaNeueLT-Thin_gdi.svg#HelveticaNeueLT-Thin') format('svg');
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  unicode-range: U+0020-2212;
}
@font-face {
  font-family: 'HelveticaNeueLT-LightCond';
  src: url('../fonts/HelveticaNeueLT-LightCond_gdi.eot');
  src: url('../fonts/HelveticaNeueLT-LightCond_gdi.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaNeueLT-LightCond_gdi.woff') format('woff'), url('../fonts/HelveticaNeueLT-LightCond_gdi.ttf') format('truetype'), url('../fonts/HelveticaNeueLT-LightCond_gdi.otf') format('opentype'), url('../fonts/HelveticaNeueLT-LightCond_gdi.svg#HelveticaNeueLT-LightCond') format('svg');
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  unicode-range: U+0020-E002;
}
@font-face {
  font-family: 'HelveticaNeueLT-Condensed';
  src: url('../fonts/HelveticaNeueLT-Condensed_gdi.eot');
  src: url('../fonts/HelveticaNeueLT-Condensed_gdi.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaNeueLT-Condensed_gdi.woff') format('woff'), url('../fonts/HelveticaNeueLT-Condensed_gdi.ttf') format('truetype'), url('../fonts/HelveticaNeueLT-Condensed_gdi.otf') format('opentype'), url('../fonts/HelveticaNeueLT-Condensed_gdi.svg#HelveticaNeueLT-Condensed') format('svg');
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  unicode-range: U+0001-2122;
}
@font-face {
  font-family: 'HelveticaNeueLT-BoldCond';
  src: url('../fonts/HelveticaNeueLT-BoldCond_gdi.eot');
  src: url('../fonts/HelveticaNeueLT-BoldCond_gdi.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaNeueLT-BoldCond_gdi.woff') format('woff'), url('../fonts/HelveticaNeueLT-BoldCond_gdi.ttf') format('truetype'), url('../fonts/HelveticaNeueLT-BoldCond_gdi.otf') format('opentype'), url('../fonts/HelveticaNeueLT-BoldCond_gdi.svg#HelveticaNeueLT-BoldCond') format('svg');
  font-weight: 700;
  font-style: normal;
  font-stretch: normal;
  unicode-range: U+0001-2122;
}
* {
  box-sizing: border-box;
}
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, input, option {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
}
body {
  margin: 0;
  padding: 0;
  font-size: 18px;
  color: #555655;
  background: #fff;
  font-family: 'HelveticaNeueLT-Condensed';
  letter-spacing: 1.5px;
}
body * {
  font-family: 'HelveticaNeueLT-Condensed', sans-serif;
}
body a {
  color: #555655;
}
button, input, select, textarea {
  font-size: 100%;
  margin: 0;
  vertical-align: baseline;
  box-shadow: none;
  white-space: normal;
}
input[type='text'], input[type='password'], input[type='search'], input[type='number'], textarea {
  border: 1px solid #555;
  font-size: 15px;
  color: #555;
  padding: 7px 10px;
  width: 100%;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  border-radius: 0;
  box-shadow: none;
}
input[type='number'] {
  border: 1px solid #ccc;
  border-radius: 4px;
}
input[type='button'], input[type='submit'] {
  -webkit-transition: 0.5s;
  transition: 0.5s;
  color: #555;
  border-radius: 0;
  border: none;
}
select {
  display: block;
  width: 100%;
  height: 34px;
  padding: 6px 12px;
  font-size: 15px;
  line-height: 1.42857143;
  color: #555;
  background-color: #fff;
  background-image: none;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
}
input[type='text']:focus, input[type='number']:focus, input[type='password']:focus, input[type='search'], textarea, select:focus {
  border-color: #66afe9;
  outline: 0;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
}
input::-webkit-input-placeholder {
  color: #555;
  opacity: 1;
}
input:-moz-placeholder {
  color: #555;
  opacity: 1;
}
input::-moz-placeholder {
  color: #555;
  opacity: 1;
}
input:-ms-input-placeholder {
  color: #555;
  opacity: 1;
}
textarea::-webkit-input-placeholder {
  color: #555;
  opacity: 1;
}
textarea:-moz-placeholder {
  color: #555;
  opacity: 1;
}
textarea::-moz-placeholder {
  color: #555;
  opacity: 1;
}
textarea:-ms-input-placeholder {
  color: #555;
  opacity: 1;
}
input:focus {
  outline: none;
  border: 1px solid #5F5F60;
}
input:focus::-webkit-input-placeholder {
  -webkit-transform: translateY(70%);
  transform: translateY(70%);
  opacity: 0;
}
input:focus::-webkit-input-placeholder:-moz-placeholder {
  -webkit-transform: translateY(70%);
  transform: translateY(70%);
  opacity: 0;
}
input:focus::-webkit-input-placeholder::-moz-placeholder {
  -webkit-transform: translateY(70%);
  transform: translateY(70%);
  opacity: 0;
}
input:focus::-webkit-input-placeholder:-ms-input-placeholder {
  -webkit-transform: translateY(70%);
  transform: translateY(70%);
  opacity: 0;
}
input:focus::-webkit-input-placeholder::-ms-input-placeholder {
  -webkit-transform: translateY(70%);
  transform: translateY(70%);
  opacity: 0;
}
input:focus::-webkit-input-placeholder {
  -webkit-transition: ease-out 0.3s;
  transition: ease-out 0.3s;
  -webkit-transform-origin: 0% 50%;
  transform-origin: 0% 50%;
}
input:focus:-moz-placeholder {
  -webkit-transition: ease-in 0.3s;
  transition: ease-in 0.3s;
  transform-origin: 0 50%;
}
/* ... */

